Create calculator HTML structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    
+    <div id="calculator">
+      <div id="display">230</div>
+      <div id="button-container">
+        <div id="digit-and-control-container">
+          <div class="row">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+          </div>
+          <div class="row">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+          </div>
+          <div class="row">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+          </div>
+          <div class="row">
+            <button>0</button>
+            <button>C</button>
+            <button>=</button>
+          </div>
+        </div>
+        <div id="operator-container">
+          <button>/</button>
+          <button>x</button>
+          <button>-</button>
+          <button>+</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
