Change background color of buttons

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </div>
           <div class="row">
             <button>0</button>
-            <button>C</button>
-            <button>=</button>
+            <button id="clear">C</button>
+            <button id="equals">=</button>
           </div>
         </div>
         <div id="operator-container">
