--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
   </head>
   <body>
     <div id="calculator">
-      <div id="display">230</div>
+      <div id="display"></div>
       <div id="button-container">
         <div id="digit-and-control-container">
           <div class="row">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button class="digit">7</button>
+            <button class="digit">8</button>
+            <button class="digit">9</button>
           </div>
           <div class="row">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+            <button class="digit">4</button>
+            <button class="digit">5</button>
+            <button class="digit">6</button>
           </div>
           <div class="row">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
+            <button class="digit">1</button>
+            <button class="digit">2</button>
+            <button class="digit">3</button>
           </div>
           <div class="row">
-            <button>0</button>
+            <button class="digit">0</button>
             <button id="clear">C</button>
             <button id="equals">=</button>
           </div>
