Create decimal, clear and clear all buttons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <div id="button-container">
         <div id="digit-and-control-container">
           <div class="row">
+            <button id="clear-all">C</button>
+            <button id="clear">CE</button>
+          </div>
+          <div class="row">
             <button class="digit">7</button>
             <button class="digit">8</button>
             <button class="digit">9</button>
@@ -28,7 +32,7 @@
           </div>
           <div class="row">
             <button class="digit">0</button>
-            <button id="clear">C</button>
+            <button id="decimal">.</button>
             <button id="equals">=</button>
           </div>
         </div>
@@ -36,7 +40,7 @@
           <button>/</button>
           <button>x</button>
           <button>-</button>
-          <button>+</button>
+          <button id="plus">+</button>
         </div>
       </div>
     </div>
