Rearrange calculator buttons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <div class="row">
             <button id="clear-all">C</button>
             <button id="clear">CE</button>
+            <button class="digit">00</button>
           </div>
           <div class="row">
             <button class="digit">7</button>
