--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="row">
             <button class="digit">0</button>
-            <button id="decimal">.</button>
+            <button id="decimal" class="digit">.</button>
             <button id="equals">=</button>
           </div>
         </div>
